--- a/about/index2.html
+++ b/about/index2.html
@@ -687,32 +687,7 @@
         </div>
         <div class="header_middle">
             <a class="header_logo" href="../index.html"></a>
-            
-			<div class='teh-centers'>
-				<ul class="nolist general_dropdown_list" style=" display: block;">
-                        <li class="hr_border">
-                            <a class="header-anc" href="../contacts/index.html#tehcenter_id_1825"> ул. Коцюбинского, д.
-                                4</a>
-                            <br><span class="general_subway_block general_subway_block_blue">Кунцевская</span>
-                        </li>
-                        <li class="hr_border">
-                            <a class="header-anc" href="../contacts/index.html#tehcenter_id_234">Востряковский проезд,
-                                д.10 Б, с2</a>
-                            <br><span class="general_subway_block general_subway_block_grey">Аннино</span>
-                        </li>
-                        <li class="hr_border">
-                            <a class="header-anc" href="../contacts/index.html#tehcenter_id_233">ул. Новый Арбат,
-                                д.36</a>
-                            <br><span class="general_subway_block general_subway_block_brown">Краснопресненская</span>
-                        </li>
-                        <li class="hr_border">
-                            <a class="header-anc" href="../contacts/index.html#tehcenter_id_232">Проспект Мира, д. 186
-                                c.1</a>
-                            <br><span class="general_subway_block general_subway_block_orange">ВДНХ</span>
-                        </li>
-                    </ul>
-			</div>
-			
+            <!--nashi raboty-->
             <div class="our-works">
                 <div class="our-works__picture">
                     <img src="info/work1.png" alt="работа 1"/>
@@ -1638,7 +1613,6 @@
     .header_middle {
         position: relative;
     }
-	
 
     .our-works {
         position: absolute;
@@ -1656,11 +1630,6 @@
         text-align: center;
         text-transform: uppercase;
     }
-	
-	.our-works__text:hover{
-		color:blue;
-		cursor:pointer;
-	}
 
     .our-works__picture img:hover {
         cursor: pointer;
@@ -1670,7 +1639,7 @@
 	.header_catalogLink_block{
 		width:100%;
 		height:100%;
-		z-index:3;
+		
 	}
 	a.nav_dropdown_link {
 		display: inline-block;
@@ -1690,33 +1659,6 @@
 	
 	.header_bottom{
 		width: 1154px;
-	}
-	
-	.teh-centers .general_dropdown_list{
-	    display: block;
-		font-size: 0;
-		background: transparent;
-		box-shadow: none;
-		width: 429px;
-		padding: 10px 30px 10px;
-		margin-left: -30px;
-		box-sizing: border-box;
-		position: absolute;
-		top: 0px;
-		left: 322px;
-		line-height: 20px;
-		z-index: 101;
-	}
-	.teh-centers .general_dropdown_list li{
-	    padding: 5px 0 0;
-		display: inline-block;
-		border: none;
-		vertical-align: top;
-		width: 50%;
-		font-size: 12px;
-	}
-	.teh-centers .general_dropdown_list li .general_subway_block{
-		margin-top:2px;
 	}
 </style>
 
